# packager

./: Dockerfile  README.md  pyproject.toml
.github/workflows/: build.yml
k8s/: deployment.yaml  grafanadashboard.yaml  service.yaml  serviceaccount.yaml  servicemonitor.yaml
scripts/: backfill_image_subs.py  populate_item_diagnostics.py
src/packager/: __init__.py  config.py  katalog.py  main.py  packager.py  worker.py
tests/: test_worker_shape.py
